fixed some spacing issues

--- a/src/style/_main-desktop.scss
+++ b/src/style/_main-desktop.scss
@@ -6,7 +6,7 @@ main {
   bottom: 0;
   left: 0;
   overflow-y: auto !important;
-  padding: 16px max(calc(50vw - 400px), 80px);
+  padding: 16px max(calc(50vw - 600px), 80px);
 
   transition: all ease-in-out 100ms;
 
