--- a/src/style/_portfolio-desktop.scss
+++ b/src/style/_portfolio-desktop.scss
@@ -22,8 +22,8 @@
         transition: all ease-in-out 300ms;
 
         > img {
-          height: 50vh;
-          margin-bottom: 32px;
+          height: 40vh;
+          margin-bottom: 7vh;
 
           &:not(:hover) {
             image-rendering: optimizeSpeed;
@@ -31,7 +31,7 @@
           }
 
           &:hover {
-            transform: scale(1.25) rotateZ(2deg);
+            transform: scale(1.5) translateY(5vh) rotateZ(2deg);
             image-rendering: optimizeQuality;
           }
         }
