--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,8 +13,7 @@
 body > *,
 body > * > * {
   color: $font;
-  font-family: -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, Ubuntu, sans-serif;
   overflow: hidden;
 }
 
